@@ -4,6 +4,7 @@ import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.scheduling.config.Task;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -16,14 +17,22 @@ import java.util.stream.Collectors;
 @Configuration
 @ConfigurationProperties(prefix = "app")
 public class AppConfig {
-    int maxWorkerNum=4;
-    String tifDirPath;
+    int maxWorkerNum;
+    String baseInDirPath;
     String baseOutDirPath;
     String blurImagePath;
-    List<ProcessItem> processItems;
+    Map<String,ProcessTask> processTasks;
 
-    public List<ProcessItem> getEnabledProcessItems(){
-        return processItems.stream().filter(ProcessItem::isEnable).collect(Collectors.toList());
+    public List<ProcessTask> getEnabledProcessTaskConfigs(){
+        List<ProcessTask> enbaledTasks = processTasks.values().stream().filter(ProcessTask::isEnable).toList();
+        for (ProcessTask task : enbaledTasks) {
+            if (task.getDependOn() != null) {
+                ProcessTask taskDepentOn = processTasks.get(task.getDependOn());
+                task.setTaskDepentOn(taskDepentOn);
+            }
+        }
+
+        return null;
     }
 
     @Data
@@ -53,5 +62,20 @@ public class AppConfig {
                     ", hashCode='"+hashCode()+ '\''+
                     '}';
         }
+    }
+
+    @Data
+    static public class ProcessTask{
+        String taskType;
+        boolean enable;
+        String blurImagePath;
+        int compressLimit;
+        String outDirPath;
+        String inDirPath;
+        String format;
+        String fileNameRegex;
+        String cataDirPath;
+        String dependOn;
+        ProcessTask taskDepentOn;
     }
 }
